# knustexams

./: README.md
midsem/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  ex.h  input_helper.cpp  main.cpp  shaders.h
midsem/progr/: my_program
moving_triangle/: .gitignore  AUTHORS  CMakeLists.txt  Makefile  README.md  callback_helpers.cpp  cmake_install.cmake  ex.cpp  fragment.fs  input_helper.cpp  main.cpp  main.h  shaders.cpp  translator.cpp  vertex.vert
moving_triangle/src/: glad.c  main.cpp  shaders.cpp  translator.cpp
